force-app/main/default/objects/OrderHeader__c/OrderHeader__c.object-meta.xml
<CustomObject>
    <label>注文</label>
    <nameField>
        <label>注文#</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>