force-app/main/default/objects/OrderHeader__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>注文 (荷主)</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>