force-app/main/default/objects/OrderHeader__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>荷主ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>