force-app/main/default/objects/OrderHeader__c/fields/Active_F__c.field-meta.xml
<CustomField>
    <fullName>Active_F__c</fullName>
    <formula>IF (   Account__c   != null,   NOT( Account__r.DeliveryContractTermination__c)   , True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>