force-app/main/default/objects/OrderHeader__c/fields/AmountRoute__c.field-meta.xml
<CustomField>
    <fullName>AmountRoute__c</fullName>
    <label>運賃（路線便）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>