force-app/main/default/objects/OrderHeader__c/fields/AreaDifferential__c.field-meta.xml
<CustomField>
    <fullName>AreaDifferential__c</fullName>
    <label>地区割増</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>