force-app/main/default/objects/OrderHeader__c/fields/BillingPriceConfirmed__c.field-meta.xml
<CustomField>
    <fullName>BillingPriceConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求不可</label>
    <type>Checkbox</type>
</CustomField>