force-app/main/default/objects/OrderHeader__c/fields/CancelFee__c.field-meta.xml
<CustomField>
    <fullName>CancelFee__c</fullName>
    <label>キャンセル料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>