force-app/main/default/objects/OrderHeader__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>取引日</label>
    <type>Date</type>
</CustomField>