force-app/main/default/objects/OrderHeader__c/fields/DeliveryDestinationAddress2__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationAddress2__c</fullName>
    <label>納品先住所2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>