force-app/main/default/objects/OrderHeader__c/fields/DeliveryDestinationPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationPostalCode__c</fullName>
    <label>納品先郵便番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>