force-app/main/default/objects/OrderHeader__c/fields/DeliverySystem_F__c.field-meta.xml
<CustomField>
    <fullName>DeliverySystem_F__c</fullName>
    <formula>Destination__r.DeliverySystem__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納品システム名</label>
    <type>Text</type>
</CustomField>