force-app/main/default/objects/OrderHeader__c/fields/DeliverySystemURL__c.field-meta.xml
<CustomField>
    <fullName>DeliverySystemURL__c</fullName>
    <formula>Destination__r.DeliverySystem__r.LoginUrl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納品システムURL</label>
    <type>Text</type>
</CustomField>