force-app/main/default/objects/OrderHeader__c/fields/DeliverySystemURLLink__c.field-meta.xml
<CustomField>
    <fullName>DeliverySystemURLLink__c</fullName>
    <formula>HYPERLINK(Destination__r.DeliverySystem__r.LoginUrl__c,Destination__r.DeliverySystem__r.LoginUrl__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納品システムURL</label>
    <type>Text</type>
</CustomField>