force-app/main/default/objects/OrderHeader__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime__c</fullName>
    <label>出発時間帯</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
                <label>午前</label>
            </value>
            <value>
                <fullName>PM</fullName>
                <label>午後</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>