force-app/main/default/objects/OrderHeader__c/fields/DestinationId__c.field-meta.xml
<CustomField>
    <fullName>DestinationId__c</fullName>
    <label>着地ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>