force-app/main/default/objects/OrderHeader__c/fields/DestinationPrefecture_F__c.field-meta.xml
<CustomField>
    <fullName>DestinationPrefecture_F__c</fullName>
    <formula>Text(Destination__r.Prefecture__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>着地都道府県</label>
    <type>Text</type>
</CustomField>