force-app/main/default/objects/OrderHeader__c/fields/DispatchDatetime__c.field-meta.xml
<CustomField>
    <fullName>DispatchDatetime__c</fullName>
    <label>伝票発行日時</label>
    <type>DateTime</type>
</CustomField>