force-app/main/default/objects/OrderHeader__c/fields/DispatchDetail_Cnt__c.field-meta.xml
<CustomField>
    <fullName>DispatchDetail_Cnt__c</fullName>
    <label>配車明細の件数</label>
    <summaryForeignKey>DispatchDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>