force-app/main/default/objects/OrderHeader__c/fields/Distance_F__c.field-meta.xml
<CustomField>
    <fullName>Distance_F__c</fullName>
    <formula>IF(
    /* 条件 */
    AND(
        NOT(ISBLANK(OriginPlace__c)),
        NOT(ISBLANK(OriginPlace__r.Latitude__c)),
        NOT(ISBLANK(OriginPlace__r.Longitude__c)),
        NOT(ISBLANK(Destination__c)),
        NOT(ISBLANK(Destination__r.Latitude__c)),
        NOT(ISBLANK(Destination__r.Longitude__c))
    ),
    /* 距離計算 */
    DISTANCE(
        GEOLOCATION(OriginPlace__r.Latitude__c, OriginPlace__r.Longitude__c), 
        GEOLOCATION(Destination__r.Latitude__c, Destination__r.Longitude__c), 
        &apos;km&apos;
    ),
    NULL
)
/* 空白項目を空白として処理 */</formula>
    <label>距離</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>