force-app/main/default/objects/OrderHeader__c/fields/DistanceRoute__c.field-meta.xml
<CustomField>
    <fullName>DistanceRoute__c</fullName>
    <label>距離（路線便）</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>