force-app/main/default/objects/OrderHeader__c/fields/DriverMaster__c.field-meta.xml
<CustomField>
    <fullName>DriverMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>・通常配車の場合、配車時に設定する。
・富士エコー定期便の際、受注課の方が入力する。</description>
    <label>ドライバー</label>
    <referenceTo>DriverMaster__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>