force-app/main/default/objects/OrderHeader__c/fields/ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDate__c</fullName>
    <label>納品日</label>
    <type>Date</type>
</CustomField>