force-app/main/default/objects/OrderHeader__c/fields/FirstProductName__c.field-meta.xml
<CustomField>
    <fullName>FirstProductName__c</fullName>
    <description>「1件目商品名設定」フローで設定される</description>
    <label>1件目商品名(手入力)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>