force-app/main/default/objects/OrderHeader__c/fields/FirstProductName_F__c.field-meta.xml
<CustomField>
    <fullName>FirstProductName_F__c</fullName>
    <formula>IF (AND(Product_Cnt__c &gt; 1,NOT( ISBLANK(FirstProductName__c  ) )) ,  FirstProductName__c  + &apos; 他&apos;, FirstProductName__c  )</formula>
    <label>1件目商品名</label>
    <type>Text</type>
</CustomField>