force-app/main/default/objects/OrderHeader__c/fields/FirstWarehouseMaster__c.field-meta.xml
<CustomField>
    <fullName>FirstWarehouseMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>枝番が1の注文明細のピッキングリストの最初のレコードの在庫情報の倉庫</description>
    <label>Firstピッキングの倉庫</label>
    <referenceTo>WarehouseMaster__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>