force-app/main/default/objects/OrderHeader__c/fields/FuelCost_Sum__c.field-meta.xml
<CustomField>
    <fullName>FuelCost_Sum__c</fullName>
    <label>燃料費</label>
    <summarizedField>DispatchDetail__c.FuelCost__c</summarizedField>
    <summaryForeignKey>DispatchDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>