force-app/main/default/objects/OrderHeader__c/fields/FuelSurchage__c.field-meta.xml
<CustomField>
    <fullName>FuelSurchage__c</fullName>
    <label>燃料サーチャージ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>