force-app/main/default/objects/OrderHeader__c/fields/GasolinePriceMaster__c.field-meta.xml
<CustomField>
    <fullName>GasolinePriceMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>燃料単価マスタ</label>
    <referenceTo>GasolinePriceMaster__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>