force-app/main/default/objects/OrderHeader__c/fields/ImportedAccountName__c.field-meta.xml
<CustomField>
    <fullName>ImportedAccountName__c</fullName>
    <label>取引先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>