force-app/main/default/objects/OrderHeader__c/fields/ImportedDeliveryDestinationPhone__c.field-meta.xml
<CustomField>
    <fullName>ImportedDeliveryDestinationPhone__c</fullName>
    <label>納品先電話番号</label>
    <type>Phone</type>
</CustomField>