force-app/main/default/objects/OrderHeader__c/fields/InportedDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>InportedDeliveryDestination__c</fullName>
    <label>納品先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>