force-app/main/default/objects/OrderHeader__c/fields/InvoiceAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>請求先（集計使用名）</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>注文 (請求先（集計使用名）)</relationshipLabel>
    <relationshipName>OrderHeaderInvoiceAccountList</relationshipName>
    <type>Lookup</type>
</CustomField>