force-app/main/default/objects/OrderHeader__c/fields/LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>LoadingDate__c</fullName>
    <label>積込日</label>
    <type>Date</type>
</CustomField>