force-app/main/default/objects/OrderHeader__c/fields/LoadingDateText__c.field-meta.xml
<CustomField>
    <fullName>LoadingDateText__c</fullName>
    <label>積込日テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>