force-app/main/default/objects/OrderHeader__c/fields/LoadingInformation__c.field-meta.xml
<CustomField>
    <fullName>LoadingInformation__c</fullName>
    <label>積情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>