force-app/main/default/objects/OrderHeader__c/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <label>ロット番号</label>
    <length>80</length>
    <type>Text</type>
</CustomField>