force-app/main/default/objects/OrderHeader__c/fields/ManualUpdateDatetime__c.field-meta.xml
<CustomField>
    <fullName>ManualUpdateDatetime__c</fullName>
    <label>手動更新日時</label>
    <type>DateTime</type>
</CustomField>