force-app/main/default/objects/OrderHeader__c/fields/ManualUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>ManualUpdateFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動更新フラグ</label>
    <type>Checkbox</type>
</CustomField>