force-app/main/default/objects/OrderHeader__c/fields/ManualUpdateNote__c.field-meta.xml
<CustomField>
    <fullName>ManualUpdateNote__c</fullName>
    <label>手動更新メモ</label>
    <type>TextArea</type>
</CustomField>