force-app/main/default/objects/OrderHeader__c/fields/NextDayPickingDelayFlag_F__c.field-meta.xml
<CustomField>
    <fullName>NextDayPickingDelayFlag_F__c</fullName>
    <formula>NOT(
    ISBLANK(LoadingDate__c)
    ||
    ISBLANK(TEXT(TransportationMode__c))
    ||
    ISBLANK(OrderDetail_Cnt__c)
)
&amp;&amp;
ISPICKVAL(TransportationMode__c, &quot;Charter&quot;)
&amp;&amp;
NOW() &gt; DATETIMEVALUE(TEXT(LoadingDate__c - 1) &amp; &quot; 9:00:00&quot;) /* 9:00:00Z GMT　= 18時JST */
&amp;&amp;
(
    ISBLANK(PickingedQuantity_Sum__c)
    ||
    OrderDetailQuantity_Sum__c &lt;&gt; PickingedQuantity_Sum__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>翌日出荷分のピッキングリスト遅延フラグ</label>
    <type>Checkbox</type>
</CustomField>