force-app/main/default/objects/OrderHeader__c/fields/NotNeedShipping__c.field-meta.xml
<CustomField>
    <fullName>NotNeedShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出庫不要</label>
    <type>Checkbox</type>
</CustomField>