force-app/main/default/objects/OrderHeader__c/fields/OrderDetail_Cnt__c.field-meta.xml
<CustomField>
    <fullName>OrderDetail_Cnt__c</fullName>
    <label>注文明細の件数</label>
    <summaryForeignKey>OrderDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>