force-app/main/default/objects/OrderHeader__c/fields/OrderDetailQuantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>OrderDetailQuantity_Sum__c</fullName>
    <label>注文明細の数</label>
    <summarizedField>OrderDetail__c.Quantity__c</summarizedField>
    <summaryForeignKey>OrderDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>