force-app/main/default/objects/OrderHeader__c/fields/OrderLimitQuantity_F__c.field-meta.xml
<CustomField>
    <fullName>OrderLimitQuantity_F__c</fullName>
    <formula>CASE(TEXT( TransportationMode__c ),
  &quot;Route&quot;, OrderMaximumLimit__r.ScheduledRouteService__c,
  OrderMaximumLimit__r.ChatterDelivery__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注文上限量</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>