force-app/main/default/objects/OrderHeader__c/fields/OrderMaximumLimit__c.field-meta.xml
<CustomField>
    <fullName>OrderMaximumLimit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>「マルエス」発、チャーター／路線便の場合設定
注文上限のレコード必ず事前登録をお願いします。
後から登録された場合、上限との比較できません。</description>
    <label>注文上限</label>
    <referenceTo>OrderMaximumLimit__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>