force-app/main/default/objects/OrderHeader__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>依頼番号</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>