force-app/main/default/objects/OrderHeader__c/fields/OriginPlace__c.field-meta.xml
<CustomField>
    <fullName>OriginPlace__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Raysheetに入力が必要な必須項目</description>
    <inlineHelpText>いずれかの条件と一致する必要があります。【荷主名※または請求先名】【マルエス(自社)】【荷主名が空のもの】</inlineHelpText>
    <label>発地</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>選択した発地はこの荷主の注文レコードでは使用できません。</errorMessage>
        <filterItems>
            <field>OriginDestination__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>OriginDestination__c.Account__r.AccountCode__c</field>
            <operation>equals</operation>
            <value>9901</value>
        </filterItems>
        <filterItems>
            <field>OriginDestination__c.Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>OriginDestination__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.InvoiceAccount__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OriginDestination__c</referenceTo>
    <relationshipLabel>注文（発地）</relationshipLabel>
    <relationshipName>OrderHeaderOriginPlaceList</relationshipName>
    <type>Lookup</type>
</CustomField>