force-app/main/default/objects/OrderHeader__c/fields/OriginPrefecture_F__c.field-meta.xml
<CustomField>
    <fullName>OriginPrefecture_F__c</fullName>
    <formula>Text( OriginPlace__r.Prefecture__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発地都道府県</label>
    <type>Text</type>
</CustomField>