force-app/main/default/objects/OrderHeader__c/fields/PickingedQuantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>PickingedQuantity_Sum__c</fullName>
    <label>ピッキング済み数</label>
    <summarizedField>PickingList__c.Quantity__c</summarizedField>
    <summaryForeignKey>PickingList__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>