force-app/main/default/objects/OrderHeader__c/fields/Product_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Product_Cnt__c</fullName>
    <label>商品の件数</label>
    <summaryFilterItems>
        <field>OrderDetail__c.ProductMaster__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>