force-app/main/default/objects/OrderHeader__c/fields/QuantityForShippingFeeCal__c.field-meta.xml
<CustomField>
    <fullName>QuantityForShippingFeeCal__c</fullName>
    <label>運賃計算用数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>