force-app/main/default/objects/OrderHeader__c/fields/ReceptionCompletedDatetime__c.field-meta.xml
<CustomField>
    <fullName>ReceptionCompletedDatetime__c</fullName>
    <description>「受付確認済日時設定」フローで設定される</description>
    <label>受付確認済日時</label>
    <type>DateTime</type>
</CustomField>