force-app/main/default/objects/OrderHeader__c/fields/ReceptionDatetime__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDatetime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>受付日時</label>
    <type>DateTime</type>
</CustomField>