force-app/main/default/objects/OrderHeader__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <externalId>true</externalId>
    <label>登録NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>