force-app/main/default/objects/OrderHeader__c/fields/RegularServiceInformation__c.field-meta.xml
<CustomField>
    <fullName>RegularServiceInformation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>定期便情報#</label>
    <referenceTo>RegularServiceInformation__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>