force-app/main/default/objects/OrderHeader__c/fields/Remarks1__c.field-meta.xml
<CustomField>
    <fullName>Remarks1__c</fullName>
    <inlineHelpText>請求書に記載される備考テキスト</inlineHelpText>
    <label>請求書の備考</label>
    <type>TextArea</type>
</CustomField>