force-app/main/default/objects/OrderHeader__c/fields/Remarks2__c.field-meta.xml
<CustomField>
    <fullName>Remarks2__c</fullName>
    <inlineHelpText>本注文の備考テキスト</inlineHelpText>
    <label>注文の備考</label>
    <type>TextArea</type>
</CustomField>