force-app/main/default/objects/OrderHeader__c/fields/Remarks3__c.field-meta.xml
<CustomField>
    <fullName>Remarks3__c</fullName>
    <inlineHelpText>商談から作成された注文の備考テキスト</inlineHelpText>
    <label>商談の備考</label>
    <type>TextArea</type>
</CustomField>