force-app/main/default/objects/OrderHeader__c/fields/RouteDeliveryDelayFlag_F__c.field-meta.xml
<CustomField>
    <fullName>RouteDeliveryDelayFlag_F__c</fullName>
    <formula>NOT(
    ISBLANK(TEXT(TransportationMode__c))
    ||
    ISBLANK(TEXT(Status__c))
    ||
    ISBLANK(LoadingDate__c)
)
&amp;&amp;
ISPICKVAL(TransportationMode__c, &quot;Route&quot;)
&amp;&amp;
ISPICKVAL(Status__c, &quot;Reception&quot;)
&amp;&amp;
NOW() &gt; DATETIMEVALUE(TEXT(LoadingDate__c) &amp; &quot; 3:00:00&quot;) /* 3:00:00Z のGMT　= 12時JST */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>路線便受付遅延フラグ</label>
    <type>Checkbox</type>
</CustomField>