force-app/main/default/objects/OrderHeader__c/fields/SequenceNumber_Max__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber_Max__c</fullName>
    <label>最大枝番</label>
    <summarizedField>OrderDetail__c.SequenceNumber__c</summarizedField>
    <summaryForeignKey>OrderDetail__c.OrderHeader__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>