force-app/main/default/objects/OrderHeader__c/fields/ShippingCompany__c.field-meta.xml
<CustomField>
    <fullName>ShippingCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>配送会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>注文 (配送会社)</relationshipLabel>
    <relationshipName>OrderHeaderShippingCompanyList</relationshipName>
    <type>Lookup</type>
</CustomField>