force-app/main/default/objects/OrderHeader__c/fields/ShippingFee__c.field-meta.xml
<CustomField>
    <fullName>ShippingFee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>運賃#</label>
    <referenceTo>ShippingFee__c</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderHeaderList</relationshipName>
    <type>Lookup</type>
</CustomField>