force-app/main/default/objects/OrderHeader__c/fields/ShippingFeeCalComment__c.field-meta.xml
<CustomField>
    <fullName>ShippingFeeCalComment__c</fullName>
    <label>運賃自動計算コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>