force-app/main/default/objects/OrderHeader__c/fields/ShippingFeeManualFlag__c.field-meta.xml
<CustomField>
    <fullName>ShippingFeeManualFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>チェックしたら自動計算が止まる</description>
    <label>運賃手動計算フラグ</label>
    <type>Checkbox</type>
</CustomField>