force-app/main/default/objects/OrderHeader__c/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <label>配送名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>