force-app/main/default/objects/OrderHeader__c/fields/SlipKindDesignated__c.field-meta.xml
<CustomField>
    <fullName>SlipKindDesignated__c</fullName>
    <label>伝票種別指定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>