force-app/main/default/objects/OrderHeader__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>「受付」→「受付確認済」の際は受注課担当がダブルチェックする</description>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reception</fullName>
                <default>true</default>
                <label>受付</label>
            </value>
            <value>
                <fullName>ReceptionCompleted</fullName>
                <label>受付確認済み</label>
            </value>
            <value>
                <fullName>DispatchCompleted</fullName>
                <label>配車完了</label>
            </value>
            <value>
                <fullName>DeliveryCompleted</fullName>
                <label>配送完了</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <label>キャンセル</label>
            </value>
            <value>
                <fullName>InvoiceConfirmed</fullName>
                <label>請求処理済み</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>