force-app/main/default/objects/OrderHeader__c/fields/SubcontractBillingDate__c.field-meta.xml
<CustomField>
    <fullName>SubcontractBillingDate__c</fullName>
    <label>下請け請求日</label>
    <type>Date</type>
</CustomField>